# SafFire

./: .gitignore  Cargo.toml  D3miropeats.js  README.md  SafFire.js  SafFire.pptx  browserconfig.xml  filled_bezier.html  index.html  lib.js  main.js  setup.js
datasets/: CHM1.tbl  CHM13_v1.1_CenSat.bed  CHM1_CenSat.bed  CHM1_PAV.bed  CHM1_to_CHM13_v1.1.tbl  CenSat.bed  CenSat.bedbck  GRCh38_CenSat.bed  GRCh38_gaps.bed  GRCh38_to_CHM13_v1.1.tbl  GRCh38_to_T2T.CHM13.v1.0_mm2_v2.22.tbl  GRCh38_to_T2T.CHM13.v1.1.tbl  GRCh38_to_T2T.CHM13.v1.1_100k.tbl  GRCh38_to_T2TCHM13.tbl  genome.bed  genome.fai  metadata.csv
datasets/CHM13_v1.1/: CHM13_v1.1_gaps.bed  CHM1_raw.bed9
datasets/CHM1_2/: CHM1_2_CenSat.bed
datasets/GM12878v0.1.0_1/: GM12878v0.1.0_1_gaps.bed
datasets/GM12878v0.1.0_2/: GM12878v0.1.0_2_gaps.bed
datasets/HPRC/: CHM1_2.bed  GRCh38_1.bed  HG002_1.bed  HG002_2.bed  HG002_2022-02-01_verkko_1.bed  HG002_2022-02-01_verkko_2.bed  HG00438_1.bed  HG00438_2.bed  HG00514_1.bed  HG00514_2.bed  HG005_1.bed  HG005_2.bed  HG00621_1.bed  HG00621_2.bed  HG00673_1.bed  HG00673_2.bed  HG00733_1.bed  HG00733_2.bed  HG00735_1.bed  HG00735_2.bed  HG00741_1.bed  HG00741_2.bed  HG01071_1.bed  HG01071_2.bed  HG01106_1.bed  HG01106_2.bed  HG01109_1.bed  HG01109_2.bed  HG01123_1.bed  HG01123_2.bed  HG01175_1.bed  HG01175_2.bed  HG01243_1.bed  HG01243_2.bed  HG01258_1.bed  HG01258_2.bed  HG01358_1.bed  HG01358_2.bed  HG01361_1.bed  HG01361_2.bed  (+65 more)
datasets/T2T-CHM13v2_1/: T2T-CHM13v2_1_CenSat.bed  chm13v2.0_chrY_CenSat_Preliminary_v0.bed
scripts/: simplify_bed.py
src/: lib.rs
(+29 files in other folders)
